--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -3,9 +3,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 5rem;
+  height: 3rem;
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 5rem;
   background-color: rgb(255, 196, 118);
 }
 
